remove and copy

--- a/python-app-starting-setup/Dockerfile
+++ b/python-app-starting-setup/Dockerfile
@@ -15,3 +15,34 @@ CMD ["python", "rng.py"]
 #Please enter the max number: 56
 #50
 #fatemehrahim
+
+
+#fatemehrahimi@fatemehRahimis-MacBook-Pro python-app-starting-setup % docker start -i -a 4fb84b66ed97 
+#Please enter the min number: 30
+#Please enter the max number: 50
+
+
+#docker rmi image id  for deleting emages
+#docker rm container id  for deleting container 
+
+#docker run -p 3000:80 -d --rm 0hhh9jjnn automatically remove
+#-rm used ofr remove the container after stoping, it will works till you stop it 
+
+#fatemehrahimi@fatemehRahimis-MacBook-Pro python-app-starting-setup % docker image inspect 89281a0a4a4a 
+
+
+#if you want to copy inside container or copy from the containerfatemehrahimi@fatemehRahimis-MacBook-Pro python-app-starting-setup % docker cp dumy/. focused_hoover:/test  
+#Successfully copied 2.56kB to focused_hoover:/test
+#fatemehrahimi@fatemehRahimis-MacBook-Pro python-app-starting-setup % docker cp focused_hoover:/test dumy
+#Successfully copied 2.56kB to /Users/fatemehrahimi/docker/python-app-starting-setup/dumy
+
+
+
+#if you want to select a name for container 
+#docker run -p 3000:80 -d --rm --name alibab container id
+
+#you can create name and tag for image
+# docker bulid -t goals:latest .
+
+#remove all of containers 
+#docker rm -f $(docker ps -aq)
